--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,10 @@ body,td,th,p{
 body {
 	background-color: #fdfdfd;
 	margin: 0;
-	position:relative;
+  position:relative;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -21,7 +24,7 @@ a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+a:hover, a:focus {  
 	color: #3397db;
 	text-decoration: none;
 }
@@ -38,6 +41,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
 }
 #footer {
   background-color: #444;
@@ -51,7 +57,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  /* height: 80px; Removed by DB*/
   background-color: #252831;
   text-align:center;
 }
@@ -71,7 +77,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    /* width: calc(50% - 80px);  Removed to stretch grey bar on review pages*/
 }
 
 /* Display list items side by side */
@@ -106,7 +112,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  /* height: 100%; Removed by DB */ 
   background-color: #3397DB;
   align-items: center;
 }
@@ -133,9 +139,18 @@ nav h1 a {
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
+  margin: 0 auto;
   padding: 30px 15px 60px;
   text-align: center;
+  /* width: 100%; See how it looks without this*/
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: space-between; Center per DB */
+  justify-content: center; 
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;  MC WT */    
 }
 #restaurants-list li {
   background-color: #fff;
@@ -144,16 +159,43 @@ nav h1 a {
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  text-align: center;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 470px; MC WT */
+  width: 270px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+/* DB WT */
+@media screen and (min-width: 0px) {
+  #resaurants-list li {
+    max-width: 100%;
+  }
+}  
+
+@media screen and (min-width: 768px) {
+  #retaurants-list li {
+    max-width: 50%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #restaurants-list li {
+    max-width: 300px; 
+  }
+}
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  /* min-height: 248px; Removed per DB*/
+  min-width: 100%; 
+  overflow: hidden; /* DB */
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -183,30 +225,34 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+/* inside header commented out by DB */  
 .inside header {
-  position: fixed;
+  position: relative;
   top: 0;
-  width: 100%;
-  z-index: 1000;
-}
+  /* width: 100%; */ 
+  z-index: 1000; 
+} 
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 200px; /* 200 px per DB, original 87% */
+  /* Removed by DB
   position: fixed;
   right: 0;
   top: 80px;
-  width: 50%;
+  width: 50%; */
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+/* Removed by DB  
 .inside #footer {
   bottom: 0;
   position: absolute;
   width: 50%;
 }
+*/ 
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
@@ -218,7 +264,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  width: 90%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -240,10 +286,16 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+  /* width: 100%; original 50% */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #reviews-container {
   padding: 30px 40px 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -265,7 +317,8 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  /* width: 85%; DB */
+
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -273,3 +326,4 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
